Updated out of date casting Types, and also checkTruncate